<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fsck.k9.activity.drunk_mode_challenges.PhotoChallenge">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="348dp"
        android:layout_height="257dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/choice4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prompt"
        tools:src="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/prompt"
        android:layout_width="356dp"
        android:layout_height="83dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="10dp"
        android:background="@color/light_black"
        android:gravity="center"
        android:text="@string/photo_challenge_prompt"
        android:textColor="@color/light_grey"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/choice1"
        android:layout_width="119dp"
        android:layout_height="53dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="90dp"
        android:background="@color/light_black"
        android:textColor="@color/light_grey"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/choice4"
        app:layout_constraintEnd_toStartOf="@+id/choice4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/choice4" />

    <Button
        android:id="@+id/choice2"
        android:layout_width="119dp"
        android:layout_height="53dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="90dp"
        android:background="@color/light_black"
        android:textColor="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="@+id/choice3"
        app:layout_constraintEnd_toStartOf="@+id/choice3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/choice3" />

    <Button
        android:id="@+id/choice3"
        android:layout_width="119dp"
        android:layout_height="53dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="26dp"
        android:background="@color/light_black"
        android:textColor="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/choice2"
        app:layout_constraintTop_toBottomOf="@+id/choice4" />

    <Button
        android:id="@+id/choice4"
        android:layout_width="119dp"
        android:layout_height="53dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="24dp"
        android:background="@color/light_black"
        android:textColor="@color/light_grey"
        app:layout_constraintBottom_toTopOf="@+id/choice3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/choice1"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</android.support.constraint.ConstraintLayout>
